--- a/dom.css
+++ b/dom.css
@@ -6,5 +6,10 @@
   .greensquare{
     width: 100px;
     height: 100px;
-    background-color:peru;
+    background-color:green;
+  }
+  #yellowsquare{
+    width: 100px;
+    height: 100px;
+    background-color:yellow;
   }
